# afpfs-ng

./: .git-blame-ignore-revs  .gitignore  AGENTS.md  AUTHORS  BUGS  Bugs.txt  ChangeLog  DAEMON_ARCHITECTURE.md  FUTURE  INSTALL  INSTALL.md  Makefile.am  Makefile.in  NEWS  PHASE0_PROGRESS.md  PHASE_3_ANALYSIS.md  PHASE_4_ANALYSIS.md  PHASE_4_STAGE1_PLAN.md  PHASE_4_STAGE1_PROGRESS.md  README  README.html  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  TODO  TODO.md  aclocal.m4  afp.c  afp.h  afp_protocol.h  afp_server.h  attr.c  bootstrap  client.c  codefmt.sh  codepage.c  codepage.h  commands.c  config.h.in  configure  (+36 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  code_analysis.yml  test.yml
cmdline/: Makefile.am  Makefile.in  afpcmd.1  client_interactive.c  client_url.c  client_url.h  cmdline_afp.c  cmdline_afp.h  cmdline_main.c  cmdline_testafp.c  getstatus.c  meson.build
daemon/: Makefile  Makefile.am  Makefile.in  client.c  commands.c  commands.h  daemon.c  daemon.h  daemon_client.c  daemon_client.h  daemon_fuse.c  extra.c  fuse_int.c  fuse_internal.h  meson.build  stateless.c
distrib/: afpfs-ng.spec
docs/: DEVELOPER.md  FEATURES.md  FEATURES.txt  GETTING_STARTED.md  INSTALL  Makefile.am  Makefile.in  PERFORMANCE.md  README  README.html  REPORTING-BUGS.txt  REPORTING_BUGS.md  design.txt  meson.build
docs/manpages/: afp_client.1  afp_client.1.md  afpcmd.1  afpcmd.1.md  afpfsd.1  afpfsd.1.md  afpgetstatus.1  afpgetstatus.1.md  afpsld.1  make_man.sh  meson.build  mount_afpfs.1  mount_afpfs.1.md
fuse/: Makefile.am  Makefile.in  afp_server.h  afpfs  client.c  commands.c  commands.h  daemon.c  daemon.h  extra.c  foo  fuse_error.c  fuse_error.h  fuse_int.c  fuse_int.h  fuse_internal.h  fuse_ipc.h  fuse_stateless.c  meson.build  mount_afp.1  stateless.c
include/: Makefile.am  Makefile.in  afp.h  afp_ipc.h  afp_protocol.h  afp_server.h  afpclient_log.h  afpfsd.h  afpsl.h  codepage.h  compat.h  daemon_signals.h  daemon_socket.h  dsi.h  libafpclient.h  libafpclient_internal.h  log.h  map_def.h  meson.build  midlevel.h  server.h  uams_def.h  utils.h  volinfo.h
include/afpfs-ng/: Makefile.am  afp.h
lib/: Makefile  Makefile.am  Makefile.in  afp.c  afp_replies.h  afp_url.c  attr.c  client.c  codepage.c  connect.c  daemon_signals.c  daemon_socket.c  debug.c  did.c  did.h  dsi.c  dsi_protocol.h  explicit_bzero.c  files.c  fork.c  forklist.c  forklist.h  identify.c  libafpclient.la  log.c  login.c  loop.c  lowlevel.c  lowlevel.h  mac_roman.h  map.c  map_def.c  meson.build  meta.c  midlevel.c  proto_attr.c  proto_desktop.c  proto_directory.c  proto_files.c  proto_fork.c  (+26 more)
test/: Dockerfile  Makefile  TESTS.md  entrypoint.sh  test_afpcmd_batch.t  test_afpcmd_interactive.t  test_afpgetstatus.t  test_fuse.t
test/stress/: README.md  run_all_tests.sh  test_diagnosis.sh  test_parallel_create.sh  test_parallel_mkdir.sh  test_parallel_write.sh  test_rapid_churn.sh  test_recursive_delete.sh
