

libafpclient_la_CFLAGS = -D_FILE_OFFSET_BITS=64 -I$(top_srcdir)/include @CFLAGS@

lib_LTLIBRARIES = libafpclient.la

libafpclient_la_SOURCES = afp.c attr.c codepage.c desktop.c did.c directory.c dsi.c files.c fork.c login.c map.c map_def.c replyblock.c resource.c proto_server.c uams.c uams_def.c unicode.c users.c utils.c volinfo.c volume.c log.c client.c server.c connect.c loop.c midlevel.c
# libafpclient_la_LDFLAGS = -module -avoid-version


