libafpclient_sources = files(
    'afp.c',
    'afp_url.c',
    'client.c',
    'codepage.c',
    'connect.c',
    'debug.c',
    'did.c',
    'dsi.c',
    'forklist.c',
    'identify.c',
    'log.c',
    'loop.c',
    'lowlevel.c',
    'map_def.c',
    'midlevel.c',
    'proto_attr.c',
    'proto_desktop.c',
    'proto_directory.c',
    'proto_files.c',
    'proto_fork.c',
    'proto_login.c',
    'proto_map.c',
    'proto_replyblock.c',
    'proto_server.c',
    'proto_session.c',
    'proto_volume.c',
    'resource.c',
    'server.c',
    'status.c',
    'uams.c',
    'uams_def.c',
    'unicode.c',
    'users.c',
    'utils.c',
)

libafpclient = library(
    'afpclient',
    libafpclient_sources,
    include_directories: incdir,
    dependencies: [root_dependencies, libiconv_dep, gcrypt_dep, pthread_dep],
    c_args: cflags,
    install: true,
)
